# browserbench

./: .env.template  .gitignore  README.md  browser_test.py  browserbench.csv  pyproject.toml  requirements.txt  run_browserbench.py  test_tasks.csv
providers/: anchor_provider.py  browserbase_provider.py  hyperbrowser_provider.py  steel_provider.py
results/: browserbench_results_anchor.csv  browserbench_results_anchor_no_stealth.csv  browserbench_results_browserbase.csv  browserbench_results_browserbase_no_stealth.csv  browserbench_results_hyperbrowser.csv  browserbench_results_hyperbrowser_no_stealth.csv  browserbench_results_steelbrowser.csv  browserbench_results_steelbrowser_no_stealth.csv
